src/objects/copado__Git_Backup__c.object
<CustomObject>
    <description>A Git Snapshot record in Copado defines a connection between a Salesforce Org with a Git Repository/branch.</description>
    <fields>
        <fullName>copado__Branch__c</fullName>
        <description>Branch of the selected Git Repository (e.g. master). Snapshots and Commits done in the Git Snapshot will affect the specified branch.</description>
        <inlineHelpText>Git branch related to the Org. Be aware that branch names are case sensitive.</inlineHelpText>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Compliance_Status__c</fullName>
        <description>Status of the most recent Compliance Scan of the Branch specified in the Git Snapshot.</description>
        <inlineHelpText>Status of the most recent Compliance Scan of the Branch specified in the Git Snapshot.</inlineHelpText>
        <label>Compliance Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Cron_Expression__c</fullName>
        <inlineHelpText>You can use www.cronmaker.com to create more sophisticated cron expressions. Please keep in mind that certain cron expressions might not be supported by Salesforce.</inlineHelpText>
        <label>Cron Expression</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__External_Id__c</fullName>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__Frequency__c</fullName>
        <description>Schedule automatic metadata backups. With the frequency set, Copado will automatically commit the metadata components of the Org into the Branch.</description>
        <inlineHelpText>Schedule automatic metadata backups. With the frequency set, Copado will automatically commit the metadata components of the Org into the Branch.</inlineHelpText>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Git_Repository__c</fullName>
        <description>Git Repository linked to the Git Snapshot. The specified Branch must exist in the Git Repository.</description>
        <inlineHelpText>Git Repository linked to the Git Snapshot. The specified Branch must exist in the Git Repository.</inlineHelpText>
        <label>Git Repository</label>
        <referenceTo>copado__Git_Repository__c</referenceTo>
        <relationshipLabel>Git Snapshots</relationshipLabel>
        <relationshipName>Git_Backups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Git_Snapshot_Permissions__c</fullName>
        <label>Git Snapshot Permissions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allow Snapshots &amp; Commits</fullName>
                    <default>true</default>
                    <label>Allow Snapshots &amp; Commits</label>
                </value>
                <value>
                    <fullName>Allow Snapshots Only</fullName>
                </value>
                <value>
                    <fullName>Allow Commits Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Last_Backup__c</fullName>
        <description>Date of the last Snapshot committed into the Branch.</description>
        <inlineHelpText>Date of the last Snapshot committed into the Branch.</inlineHelpText>
        <label>Last Snapshot</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Last_Compliance_Scan_Date__c</fullName>
        <description>Date of the last Compliance Scan of the Branch specified in the Git Snapshot.</description>
        <inlineHelpText>Date of the last Compliance Scan of the Branch specified in the Git Snapshot.</inlineHelpText>
        <label>Last Compliance Scan Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Metadata_Types__c</fullName>
        <inlineHelpText>Empty means all types. Select one or more types to limit the backup only to selected items.</inlineHelpText>
        <label>Metadata Types</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Org__c</fullName>
        <description>A validated Credential used to retrieve the metadata that will be committed to the specified Branch in the Git Snapshot.</description>
        <inlineHelpText>A validated Credential used to retrieve the metadata that will be committed to the specified Branch in the Git Snapshot.</inlineHelpText>
        <label>Credential</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Git Snapshots</relationshipLabel>
        <relationshipName>Git_Backups</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Other_Information__c</fullName>
        <label>Other Information</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Pipeline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Pipeline where the Git snapshot will be applied. It must be associated to the specified credential.</inlineHelpText>
        <label>Pipeline</label>
        <referenceTo>copado__Deployment_Flow__c</referenceTo>
        <relationshipLabel>Git Snapshots</relationshipLabel>
        <relationshipName>Git_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Scheduled_Commit_Message__c</fullName>
        <description>Message to use when committing the snapshot to Git</description>
        <inlineHelpText>Message to use when committing the snapshot to Git</inlineHelpText>
        <label>Commit Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__Scope__c</fullName>
        <inlineHelpText>Use this field to specify the files for which you want to take the snapshot. The format may vary depending on the extension that you are using. Please refer to your extension documentation.</inlineHelpText>
        <label>Scope</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Snapshot_Frequency__c</fullName>
        <defaultValue>&apos;None&apos;</defaultValue>
        <inlineHelpText>Use this field to configure automatic metadata backups. Copado will automatically commit the metadata components of the Org as per the frequency and cron expression defined.</inlineHelpText>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Schedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__View_in_Git__c</fullName>
        <description>Link to the branch in your Git Repository.</description>
        <formula>HYPERLINK(
	IF(
		AND(NOT(ISNULL(copado__Git_Repository__r.copado__Branch_Base_URL__c)), copado__Git_Repository__r.copado__Branch_Base_URL__c != &apos;&apos;), 
		IF(
			AND(NOT(ISPICKVAL(copado__Git_Repository__r.copado__Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),
			copado__Git_Repository__r.copado__Branch_Base_URL__c +  copado__Branch__c,
			IF(
				CONTAINS(copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;),
				SUBSTITUTE(copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;,copado__Branch__c),
				copado__Git_Repository__r.copado__Branch_Base_URL__c + copado__Branch__c
			)
		),
	&apos;&apos;), 
	copado__Branch__c
)</formula>
        <inlineHelpText>Link to the branch in your Git Repository.</inlineHelpText>
        <label>View in Git</label>
        <type>Text</type>
    </fields>
    <label>Git Snapshot</label>
    <listViews>
        <fullName>Demo_Repo</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Git_Repository__c</field>
            <operation>contains</operation>
            <value>demo</value>
        </filters>
        <label>Demo Repo</label>
    </listViews>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Branch__c</columns>
        <columns>copado__Frequency__c</columns>
        <columns>copado__Git_Repository__c</columns>
        <columns>copado__Org__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Git Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Git Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>